# invoice-cli

./: Cargo.toml  README.md  your_name-43087-10625860088288216734_0.profraw  your_name-43087-8247390752461886569_0.profraw  your_name-43087-8670781901613259329_0.profraw  your_name-43150-10625860088288216734_0.profraw  your_name-43150-8247390752461886569_0.profraw  your_name-43150-8670781901613259329_0.profraw  your_name-43156-826139003365677863_0.profraw
src/: main.rs
src/cli/: cli_error.rs  context_parameters.rs  create_customer.rs  create_invoice.rs  day_stats.rs  delete_customer.rs  delete_invoice.rs  edit_customer.rs  edit_settings.rs  generate_all_invoice.rs  generate_invoice.rs  get_customer.rs  get_customers.rs  get_invoice.rs  get_settings.rs  init.rs  list_customers.rs  list_invoices.rs  mistral_create_invoice.rs  mod.rs  month_stats.rs  year_stats.rs
src/cli/utils/: cli_utils_error.rs  mod.rs  select_customer.rs  select_customer_or_use_default.rs  select_invoice.rs  select_invoice_or_use_default.rs
src/entities/: customer.rs  invoice.rs  invoice_date.rs  mod.rs  product.rs  serializer.rs  settings.rs  siren.rs
src/file_manager/: context_parameters.rs  file_manager.rs  invoice_manager_error.rs  mod.rs
src/file_manager/customer/: create_customer.rs  delete_customer.rs  edit_customer.rs  get_all_customers.rs  mod.rs  (+1 more)
src/generator/: generate_invoice.rs  generator_error.rs  mod.rs
src/invoice_manager/: invoice_manager.rs  mod.rs
src/mistral/: README.md  api_response_models.rs  mod.rs  provider.rs
templates/default/: main.typ
(+15 files in other folders)
