[package]
name = "invoice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
env_logger = { version = "0.11.1", features = [] }
thiserror = "1.0.56"

[dev-dependencies]
assert_fs = "1.1.1"
serde_test = "1.0.176"
