[package]
name = "invoice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
env_logger = { version = "0.11.1", features = [] }
thiserror = "1.0.56"
dialoguer = { version = "0.11.0", features = ["default", "editor", "fuzzy-select"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
assert_fs = "1.1.1"
mockall = "0.13.1"
serde_test = "1.0.176"

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false
debug = false
